--- a/ForgedOnce.Environment/ForgedOnce.Environment.csproj
+++ b/ForgedOnce.Environment/ForgedOnce.Environment.csproj
@@ -5,6 +5,18 @@
     <Configurations>Debug;Release;Debug-cli-tools;Release-cli-tools</Configurations>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <PackageOutputPath>$(SolutionDir)NugetOutputs</PackageOutputPath>
+    <Version>0.1.0</Version>
+    <PackageId>ForgedOnce.Environment</PackageId>
+    <Authors>Yevgen Nabokov</Authors>
+    <Company />
+    <Description>ForgedOnce code generation pipeline environment library</Description>
+    <Copyright>Yevgen Nabokov</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/yevgennabokov/forgedonce</PackageProjectUrl>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="3.5.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
