--- a/ForgedOnce.Launcher.MSBuild.Default/ForgedOnce.Launcher.MSBuild.Default.csproj
+++ b/ForgedOnce.Launcher.MSBuild.Default/ForgedOnce.Launcher.MSBuild.Default.csproj
@@ -8,34 +8,58 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <NoPackageAnalysis>true</NoPackageAnalysis>
-    <IntermediatePackDir>$(MSBuildProjectDirectory)/bin/$(Configuration)/publish/</IntermediatePackDir>
-    <PublishDir>$(IntermediatePackDir)$(TargetFramework)/</PublishDir>
-    <NuspecProperties>publishDir=$([MSBuild]::NormalizeDirectory($(IntermediatePackDir)))</NuspecProperties>
-    <PackageOutputPath>$(SolutionDir)/NugetOutputs</PackageOutputPath>
+    <PackageOutputPath>$(SolutionDir)NugetOutputs</PackageOutputPath>
+    <Version>0.5.9</Version>
+    <Authors>Yevgen Nabokov</Authors>
+    <Company />
+    <Description>Configurable pipeline for code generation with adapters for C#, GLSL and TypeScript files</Description>
+    <Copyright>Yevgen Nabokov</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/yevgennabokov/forgedonce</PackageProjectUrl>
     <AssemblyName>dotnet-forgedonce-cg-msbuild</AssemblyName>
   </PropertyGroup>
     
   <PropertyGroup Condition="$(Configuration.Contains('cli-tools'))">
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>dotnet-forgedonce-cg-msbuild</ToolCommandName>
-    <NuspecFile>ForgedOnce.Launcher.MSBuild.Default.CliTool.nuspec</NuspecFile>
+    <ToolCommandName>forgedonce-cg-msbuild</ToolCommandName>    
+    <PackageId>ForgedOnce.Launcher.MSBuild.Default.CliTool</PackageId>
   </PropertyGroup>
   
-  <PropertyGroup Condition="!$(Configuration.Contains('cli-tools'))">    
-    <NuspecFile>ForgedOnce.Launcher.MSBuild.Default.nuspec</NuspecFile>
+  <PropertyGroup Condition="!$(Configuration.Contains('cli-tools'))">
+    <PackageId>ForgedOnce.Launcher.MSBuild.Default</PackageId>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <None Remove="ThirdPartyNotice.txt" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="ThirdPartyNotice.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ForgedOnce.TsLanguageServices.ModelToCode" Version="0.1.7">
+    <PackageReference Include="ForgedOnce.TsLanguageServices.ModelToCode" Version="0.1.9">
       <GeneratePathProperty>true</GeneratePathProperty>
     </PackageReference>
     <PackageReference Include="System.IO.Abstractions" Version="8.0.3" />
   </ItemGroup>
 
-  <ItemGroup>
-    <NodeRedist Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\netstandard2.0\NodeRedist\**\*.*" />
-    <CodeGeneratorJs Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\netstandard2.0\CodeGeneratorJs\**\*.*" />
+  <ItemGroup Condition="$(Configuration.Contains('cli-tools'))">
+    <Content Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\netstandard2.0\NodeRedist\**\*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Link>NodeRedist\%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <Pack>true</Pack>
+      <PackagePath>lib\$(TargetFramework)\NodeRedist\</PackagePath>
+    </Content>
+
+    <Content Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\netstandard2.0\CodeGeneratorJs\**\*.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Link>CodeGeneratorJs\%(RecursiveDir)%(Filename)%(Extension)</Link>
+      <Pack>true</Pack>
+      <PackagePath>lib\$(TargetFramework)\CodeGeneratorJs\</PackagePath>
+    </Content>
   </ItemGroup>
 
   <ItemGroup Condition="$(Configuration.Contains('cli-tools'))">
@@ -53,17 +77,5 @@
     <ProjectReference Include="..\ForgedOnce.TypeScript.MsBuild\ForgedOnce.TypeScript.MsBuild.csproj" />
     <ProjectReference Include="..\ForgedOnce.TypeScript\ForgedOnce.TypeScript.csproj" />
   </ItemGroup>
-
-  <Target Name="CopyRedist" BeforeTargets="Publish">
-    <Copy SourceFiles="@(NodeRedist)" DestinationFolder="$(PublishDir)\NodeRedist\%(RecursiveDir)" />
-    <Copy SourceFiles="@(CodeGeneratorJs)" DestinationFolder="$(PublishDir)\CodeGeneratorJs\%(RecursiveDir)" />
-  </Target>
-
-  <Target Name="PublishAll" BeforeTargets="GenerateNuspec">
-    <ItemGroup>
-      <_TargetFramework Include="$(TargetFrameworks)" />
-    </ItemGroup>
-    <MSBuild Projects="$(MSBuildProjectFullPath)" Targets="Publish" Properties="TargetFramework=%(_TargetFramework.Identity)" />
-  </Target>
 
 </Project>
