--- a/ForgedOnce.Glsl/ForgedOnce.Glsl.csproj
+++ b/ForgedOnce.Glsl/ForgedOnce.Glsl.csproj
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <PackageOutputPath>$(SolutionDir)NugetOutputs</PackageOutputPath>
-    <Version>0.4.6</Version>
+    <Version>0.4.8</Version>
     <PackageId>ForgedOnce.Glsl</PackageId>
     <Authors>Yevgen Nabokov</Authors>
     <Company />
@@ -18,17 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="ThirdPartyNotice.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="ThirdPartyNotice.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="ForgedOnce.GlslLanguageServices.Builder" Version="0.1.8" />
+    <PackageReference Include="ForgedOnce.GlslLanguageServices.Builder" Version="0.1.10" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.IO.Abstractions" Version="8.0.3" />
   </ItemGroup>
@@ -36,6 +26,14 @@
   <ItemGroup>
     <ProjectReference Include="..\ForgedOnce.Core\ForgedOnce.Core.csproj" />
     <ProjectReference Include="..\ForgedOnce.Environment\ForgedOnce.Environment.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="ThirdPartyNotice.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Pack>true</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
