--- a/ForgedOnce.TypeScript/ForgedOnce.TypeScript.csproj
+++ b/ForgedOnce.TypeScript/ForgedOnce.TypeScript.csproj
@@ -7,7 +7,7 @@
 
   <PropertyGroup>
     <PackageOutputPath>$(SolutionDir)NugetOutputs</PackageOutputPath>
-    <Version>0.4.8</Version>
+    <Version>0.4.10</Version>
     <PackageId>ForgedOnce.TypeScript</PackageId>
     <Authors>Yevgen Nabokov</Authors>
     <Company />
@@ -19,7 +19,7 @@
   
   <ItemGroup>
     <PackageReference Include="ForgedOnce.TsLanguageServices.ModelBuilder" Version="0.1.9" />
-    <PackageReference Include="ForgedOnce.TsLanguageServices.ModelToCode" Version="0.1.9">
+    <PackageReference Include="ForgedOnce.TsLanguageServices.ModelToCode" Version="0.1.11">
       <GeneratePathProperty>true</GeneratePathProperty>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -30,30 +30,13 @@
     <ProjectReference Include="..\ForgedOnce.Core\ForgedOnce.Core.csproj" />
     <ProjectReference Include="..\ForgedOnce.Environment\ForgedOnce.Environment.csproj" />
   </ItemGroup>
-
-  <!--<ItemGroup>
-    <Content Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\$(TargetFramework)\NodeRedist\**\*.*">
-      <Link>NodeRedist\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    
+  <ItemGroup>
+    <None Update="ThirdPartyNotice.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Pack>true</Pack>
-      <PackagePath>lib\$(TargetFramework)\NodeRedist\</PackagePath>
-    </Content>
-    <Content Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\$(TargetFramework)\CodeGeneratorJs\**\*.*">
-      <Link>CodeGeneratorJs\%(RecursiveDir)%(Filename)%(Extension)</Link>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <Pack>true</Pack>
-      <PackagePath>lib\$(TargetFramework)\CodeGeneratorJs\</PackagePath>
-    </Content>
-  </ItemGroup>-->
-
-  <ItemGroup>
-    <None Remove="ThirdPartyNotice.txt" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="ThirdPartyNotice.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
