--- a/ForgedOnce.Launcher.MSBuild.Default/ForgedOnce.Launcher.MSBuild.Default.csproj
+++ b/ForgedOnce.Launcher.MSBuild.Default/ForgedOnce.Launcher.MSBuild.Default.csproj
@@ -9,7 +9,7 @@
 
   <PropertyGroup>
     <PackageOutputPath>$(SolutionDir)NugetOutputs</PackageOutputPath>
-    <Version>0.7.8</Version>
+    <Version>1.0.0</Version>
     <Authors>Yevgen Nabokov</Authors>
     <Company />
     <Description>Configurable pipeline for code generation with adapters for C#, GLSL and TypeScript files</Description>
@@ -30,14 +30,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ForgedOnce.TsLanguageServices.ModelToCode" Version="0.2.17">
-      <GeneratePathProperty>true</GeneratePathProperty>
-    </PackageReference>
+    <PackageReference Include="ForgedOnce.TsLanguageServices.Host" Version="0.1.0" GeneratePathProperty="true" />
     <PackageReference Include="System.IO.Abstractions" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\netstandard2.0\CodeGeneratorJs\**\*.*">
+    <None Include="$(PkgForgedOnce_TsLanguageServices_Host)\lib\netstandard2.0\CodeGeneratorJs\**\*.*">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Link>CodeGeneratorJs\%(RecursiveDir)%(Filename)%(Extension)</Link>
       <Pack Condition="!$(Configuration.Contains('cli-tools'))">true</Pack>
