--- a/ForgedOnce.Sandbox.MsBuildRunner/ForgedOnce.Sandbox.MsBuildRunner.csproj
+++ b/ForgedOnce.Sandbox.MsBuildRunner/ForgedOnce.Sandbox.MsBuildRunner.csproj
@@ -6,9 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ForgedOnce.TsLanguageServices.ModelToCode" Version="0.2.14">
-      <GeneratePathProperty>true</GeneratePathProperty>
-    </PackageReference>
+    <PackageReference Include="ForgedOnce.TsLanguageServices.Host" Version="0.1.0" GeneratePathProperty="true" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="3.5.0" />
     <PackageReference Include="System.IO.Abstractions" Version="8.0.3" />
   </ItemGroup>
@@ -26,13 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\netstandard2.0\CodeGeneratorJs\**">
+    <Content Include="$(PkgForgedOnce_TsLanguageServices_Host)\lib\netstandard2.0\CodeGeneratorJs\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <Link>CodeGeneratorJs\%(RecursiveDir)%(Filename)%(Extension)</Link>
-    </Content>
-    <Content Include="$(PkgForgedOnce_TsLanguageServices_ModelToCode)\lib\netstandard2.0\NodeRedist\**">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <Link>NodeRedist\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Content>
     
   </ItemGroup>
