Added better command line arguments.

--- a/ForgedOnce.Launcher.MSBuild/ForgedOnce.Launcher.MSBuild.csproj
+++ b/ForgedOnce.Launcher.MSBuild/ForgedOnce.Launcher.MSBuild.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <PackageOutputPath>$(SolutionDir)NugetOutputs</PackageOutputPath>
-    <Version>0.8.0</Version>
+    <Version>0.9.1</Version>
     <PackageId>ForgedOnce.Launcher.MSBuild</PackageId>
     <Authors>Yevgen Nabokov</Authors>
     <Company />
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.Build.Locator" Version="1.4.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="3.9.0" />
     <PackageReference Include="NuGet.ProjectModel" Version="5.9.0" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
     <PackageReference Include="System.IO.Abstractions" Version="8.0.3" />
   </ItemGroup>
 
